タイトル、ゲームオーバー関連、画面の比率を変更

--- a/bin/Log.html
+++ b/bin/Log.html
@@ -128,7 +128,7 @@ td, th
 
 -->
 </STYLE>
-<title>平成よ永遠に</title>
+<title>Ever Lasting HEISEI ～平成よ永遠に～</title>
 </head>
 <body><h2>ウインドウ</h2>
 ウインドウ作成成功<br />
@@ -191,17 +191,17 @@ CPU名</td><td>
 Intel(R) Core(TM) i7-7700HQ CPU @ 2.80GHz</td></tr><tr><td>
 OS情報</td><td>
 OS: Windows
-Version: 6.2 065CE714
+Version: 6.2 07B1EA64
 Build: 9200
 ProductType: Workstation
 SuiteMask: 0x300
 </td></tr><tr><td>
 メモリ情報</td><td>
-Using: 54%
+Using: 49%
 Total physical memory: 7925MB
-Free physical memory: 3612MB
+Free physical memory: 4006MB
 Total virtual memory: 2047MB
-Free virtual memory: 1579MB
+Free virtual memory: 1569MB
 </td></tr></table>
 <strong>コア初期化成功</strong><br />
 </body>
